--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container header-container">
       <div>
-        <h1>Your Name</h1>
+        <h1>Yiming Li></h1>
         <p>Aspiring Machine Learning Engineer | Research-Oriented Developer</p>
       </div>
       <nav>
