--- a/index.html
+++ b/index.html
@@ -3,33 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Portfolio</title>
+  <title>Your Name | Physicist & Machine Learning Enthusiast</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container header-container">
       <div>
-        <h1>Yiming Li></h1>
-        <p>Aspiring Machine Learning Engineer | Research-Oriented Developer</p>
+        <h1>Your Name</h1>
+        <p>Master’s Student in Physics | Developer | Aspiring AI Engineer</p>
       </div>
       <nav>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
-        <a href="#papers">Thesis & Papers</a>
+        <a href="#academic">Academic Focus</a>
+        <a href="#global">Global Experience</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
+
     <section id="about">
       <h2>About Me</h2>
       <p>
-        I’m a developer and researcher passionate about applying machine learning and
-        computational methods to solve real-world problems. My background bridges software
-        engineering and scientific research, and I’m continuously expanding my skills in 
-        data science, deep learning, and AI-driven systems.
+        I am in the final year of my Master’s in Physics, specializing in <strong>Statistical Physics</strong> and 
+        <strong>Solid State Physics</strong>. My academic and research interests lie at the intersection of 
+        <strong>physics, computation, and machine learning</strong>—specifically in applying modern AI techniques 
+        to model and understand complex systems.
+      </p>
+      <p>
+        Alongside my studies, I have accumulated <strong>years of professional development experience</strong>,
+        working on projects that range from embedded systems and data pipelines to web-based solutions. 
+        I enjoy bridging scientific rigor with software engineering practices.
+      </p>
+      <p>
+        I’m passionate about combining scientific analysis with real-world applications and am currently
+        exploring opportunities that merge <strong>AI, physics, and global collaboration</strong>.
       </p>
     </section>
 
@@ -37,37 +48,46 @@
       <h2>Projects</h2>
       <div class="card-grid">
         <div class="card">
-          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/PROJECT_1" target="_blank">Neural ODE Solver</a></h3>
-          <p>Implemented neural networks to learn and predict coupled ODE dynamics from experimental data.</p>
+          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/neural-ode-solver" target="_blank">Neural ODE Solver</a></h3>
+          <p>Implemented machine learning models to learn the dynamics of coupled ODE systems — bridging physics and data-driven prediction.</p>
         </div>
         <div class="card">
-          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/PROJECT_2" target="_blank">Sensor Communication Interface</a></h3>
-          <p>Developed STM32-based industrial interface supporting RS485 and HART communication protocols.</p>
+          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/sensor-interface" target="_blank">Industrial Sensor Interface</a></h3>
+          <p>Developed STM32-based system enabling dual communication over RS485 and HART protocols, combining firmware and hardware control.</p>
         </div>
         <div class="card">
-          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/PROJECT_3" target="_blank">Portfolio Website</a></h3>
-          <p>Designed this portfolio using HTML, CSS, and GitHub Pages to showcase academic and engineering work.</p>
+          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/portfolio" target="_blank">Portfolio Website</a></h3>
+          <p>Created this professional website using GitHub Pages to showcase my academic, technical, and international experiences.</p>
         </div>
       </div>
     </section>
 
-    <section id="papers">
-      <h2>Thesis & Seminar Papers</h2>
-      <div class="card-grid">
-        <div class="card">
-          <h3><a href="papers/thesis.pdf" target="_blank">Bachelor Thesis: Machine Learning for Dynamical Systems</a></h3>
-          <p>Exploration of data-driven modeling techniques for nonlinear physical systems using neural architectures.</p>
-        </div>
-        <div class="card">
-          <h3>Seminar Paper: Advances in Quantum Field Theory Simulations</h3>
-          <p>Surveyed computational methods bridging QFT and deep learning frameworks for numerical simulation.</p>
-        </div>
-      </div>
+    <section id="academic">
+      <h2>Academic Focus</h2>
+      <ul>
+        <li><strong>Statistical Physics:</strong> exploring emergent behaviors and complex systems.</li>
+        <li><strong>Solid State Physics:</strong> studying electronic structure and condensed matter phenomena.</li>
+        <li><strong>Machine Learning in Physics:</strong> applying neural networks to model dynamical systems and material properties.</li>
+      </ul>
+      <p>My <a href="papers/thesis.pdf" target="_blank">Master’s thesis</a> explores how data-driven models can capture and generalize underlying physical laws.</p>
+    </section>
+
+    <section id="global">
+      <h2>Global Experience</h2>
+      <p>
+        Having lived and studied on <strong>four continents</strong>, I bring a deep appreciation for cultural diversity
+        and interdisciplinary collaboration. I am <strong>proficient in five languages</strong> and have professional
+        experience working as a <strong>translator and mediator</strong> between European businesses and Chinese clients.
+      </p>
+      <p>
+        This global background has strengthened my ability to work across different cultures, adapt to diverse environments,
+        and navigate both technical and interpersonal challenges with sensitivity and clarity.
+      </p>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>You can reach me via:</p>
+      <p>Feel free to reach out for collaborations or opportunities.</p>
       <ul>
         <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
         <li>GitHub: <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">github.com/YOUR_GITHUB_USERNAME</a></li>
@@ -77,7 +97,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Your Name — Built with HTML, CSS, and GitHub Pages</p>
+    <p>© 2025 Your Name — Physicist | Developer | Global Citizen</p>
   </footer>
 </body>
 </html>
