--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="container header-container">
       <div>
         <h1>Your Name</h1>
-        <p>Master’s Student in Physics | Developer | Aspiring AI Engineer</p>
+        <p>ETH Zurich Master's Student Physics | Developer | Translator, Mediator & Cultural Advisor</p>
       </div>
       <nav>
         <a href="#about">About</a>
-        <a href="#projects">Projects</a>
         <a href="#academic">Academic Focus</a>
+        <a href="#projects">Projects</a>
         <a href="#global">Global Experience</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -29,7 +29,7 @@
       <h2>About Me</h2>
       <p>
         I am in the final year of my Master’s in Physics, specializing in <strong>Statistical Physics</strong> and 
-        <strong>Solid State Physics</strong>. My academic and research interests lie at the intersection of 
+        <strong>Solid State Physics</strong> with a particular affinity for phase transitions. My academic and research interests lie at the intersection of 
         <strong>physics, computation, and machine learning</strong>—specifically in applying modern AI techniques 
         to model and understand complex systems.
       </p>
@@ -40,7 +40,15 @@
       </p>
       <p>
         I’m passionate about combining scientific analysis with real-world applications and am currently
-        exploring opportunities that merge <strong>AI, physics, and global collaboration</strong>.
+        exploring opportunities that merge <strong>AI and physics.
+      </p>
+      <p>
+        Furthermore, my international background has equipped me with strong cross-cultural communication skills
+        after having lived, studied, and worked across <strong>four continents</strong> and being proficient in Chinese, 
+        English, German, Spanish and Arabic. As a result, I orchestrated successful commercial agreements between 
+        Chinese and European firms as a lead translator, mediator, and cultural liaison. 
+        I am now expanding my services to new sectors and I am open for business and ready to help your company navigate cross-cultural deals. 
+        Please feel free to contact me to discuss your needs. 
       </p>
     </section>
 
