Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Physicist & Machine Learning Enthusiast</title>
+  <title>Yiming Li</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container header-container">
       <div>
-        <h1>Your Name</h1>
+        <h1>Yiming Li</h1>
         <p>ETH Zurich Master's Student Physics | Developer | Translator, Mediator & Cultural Advisor</p>
       </div>
       <nav>
@@ -26,7 +26,7 @@
   <main class="container">
 
     <section id="about">
-      <h2>About Me</h2>
+      <h2>Yiming Li</h2>
       <p>
         I am in the final year of my Master’s in Physics, specializing in <strong>Statistical Physics</strong> and 
         <strong>Solid State Physics</strong> with a particular affinity for phase transitions. My academic and research interests lie at the intersection of 
@@ -40,7 +40,7 @@
       </p>
       <p>
         I’m passionate about combining scientific analysis with real-world applications and am currently
-        exploring opportunities that merge <strong>AI and physics.
+        exploring opportunities that merge <strong>AI <strong>and physics.
       </p>
       <p>
         Furthermore, my international background has equipped me with strong cross-cultural communication skills
@@ -50,6 +50,22 @@
         I am now expanding my services to new sectors and I am open for business and ready to help your company navigate cross-cultural deals. 
         Please feel free to contact me to discuss your needs. 
       </p>
+    </section>
+
+    <section id="academic">
+      <h2>Academic Focus</h2>
+      <ul>
+        During my Bachelor’s and Master’s studies at ETH Zurich, my coursework was more theoretically inclined, with a focus on:
+        <li><strong>Statistical Physics:</strong> exploring emergent behaviors and complex systems.</li>
+        <li><strong>Solid State Physics:</strong> studying electronic structure and condensed matter phenomena.</li>
+      </ul>
+
+      <p>My most recent <a href="papers/seminar.pdf" target="_blank"> seminar paper</a> dealt with the Coset Construction of the N=2
+      Superconformal Unitary Series and how its simple currents can be applied to achieve many necessary projects commonly found in supersymmetric string theories, 
+      specifically in the context of Gepner models. </p>
+
+      <p>My <a href="papers/thesis.pdf" target="_blank">Bachelor’s thesis</a> is about the development of a FPGA-based metal detector for humanitarian demining. It uses
+      Electromagnetic Field Induction Spectroscopy to identify metallic objects underground. The signal processing and classification algorithms are implemented on a Xilinx FPGA.</p>
     </section>
 
     <section id="projects">
@@ -63,49 +79,23 @@
           <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/sensor-interface" target="_blank">Industrial Sensor Interface</a></h3>
           <p>Developed STM32-based system enabling dual communication over RS485 and HART protocols, combining firmware and hardware control.</p>
         </div>
-        <div class="card">
-          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/portfolio" target="_blank">Portfolio Website</a></h3>
-          <p>Created this professional website using GitHub Pages to showcase my academic, technical, and international experiences.</p>
-        </div>
       </div>
     </section>
 
-    <section id="academic">
-      <h2>Academic Focus</h2>
-      <ul>
-        <li><strong>Statistical Physics:</strong> exploring emergent behaviors and complex systems.</li>
-        <li><strong>Solid State Physics:</strong> studying electronic structure and condensed matter phenomena.</li>
-        <li><strong>Machine Learning in Physics:</strong> applying neural networks to model dynamical systems and material properties.</li>
-      </ul>
-      <p>My <a href="papers/thesis.pdf" target="_blank">Master’s thesis</a> explores how data-driven models can capture and generalize underlying physical laws.</p>
-    </section>
-
-    <section id="global">
-      <h2>Global Experience</h2>
-      <p>
-        Having lived and studied on <strong>four continents</strong>, I bring a deep appreciation for cultural diversity
-        and interdisciplinary collaboration. I am <strong>proficient in five languages</strong> and have professional
-        experience working as a <strong>translator and mediator</strong> between European businesses and Chinese clients.
-      </p>
-      <p>
-        This global background has strengthened my ability to work across different cultures, adapt to diverse environments,
-        and navigate both technical and interpersonal challenges with sensitivity and clarity.
-      </p>
-    </section>
+    
 
     <section id="contact">
       <h2>Contact</h2>
       <p>Feel free to reach out for collaborations or opportunities.</p>
       <ul>
-        <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
-        <li>GitHub: <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">github.com/YOUR_GITHUB_USERNAME</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank">linkedin.com/in/YOUR_LINKEDIN</a></li>
+        <li>Email: <a href="mailto:yimili@student.ethz.ch">yimili@student.ethz.ch</a></li>
+        <li>GitHub: <a href="https://github.com/Nadjmu" target="_blank">github.com/nadjmu</a></li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Your Name — Physicist | Developer | Global Citizen</p>
+    <p>© 2025 Yiming Li</p>
   </footer>
 </body>
 </html>
