--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       </p>
       <p>
         I’m passionate about combining scientific analysis with real-world applications and am currently
-        exploring opportunities that merge <strong>AI <strong>and physics.
+        exploring opportunities that merge <strong>AI and physics.</strong>
       </p>
       <p>
         Furthermore, my international background has equipped me with strong cross-cultural communication skills
-        after having lived, studied, and worked across <strong>four continents</strong> and being proficient in Chinese, 
+        after having lived, studied, and worked across four continents and being proficient in Chinese, 
         English, German, Spanish and Arabic. As a result, I orchestrated successful commercial agreements between 
         Chinese and European firms as a lead translator, mediator, and cultural liaison. 
         I am now expanding my services to new sectors and I am open for business and ready to help your company navigate cross-cultural deals. 
