--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       </ul>
 
       <p>My most recent <a href="papers/seminar.pdf" target="_blank"> seminar paper</a> dealt with the Coset Construction of the N=2
-      Superconformal Unitary Series and how its simple currents can be applied to achieve many necessary projects commonly found in supersymmetric string theories, 
-      specifically in the context of Gepner models. </p>
+      Superconformal Unitary Series and how its simple currents can be applied to achieve many projections commonly found in supersymmetric string theories, specifically 
+      for ensuring worldsheet supersymmetry and spacetime supersymmetry. The second part of the paper deals with Gepner models which are exactly solvable supersymmetric string theories. </p>
 
       <p>My <a href="papers/thesis.pdf" target="_blank">Bachelor’s thesis</a> is about the development of a FPGA-based metal detector for humanitarian demining. It uses
       Electromagnetic Field Induction Spectroscopy to identify metallic objects underground. The signal processing and classification algorithms are implemented on a Xilinx FPGA.</p>
@@ -72,7 +72,7 @@
       <h2>Projects</h2>
       <div class="card-grid">
         <div class="card">
-          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/neural-ode-solver" target="_blank">Neural ODE Solver</a></h3>
+          <h3><a href="https://github.com/Nadjmu/yokodaq" target="_blank">Neural ODE Solver</a></h3>
           <p>Implemented machine learning models to learn the dynamics of coupled ODE systems — bridging physics and data-driven prediction.</p>
         </div>
         <div class="card">
