--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main class="container">
 
     <section id="about">
-      <h2>Yiming Li</h2>
+      <h2>About me</h2>
       <p>
         I am in the final year of my Master’s in Physics, specializing in <strong>Statistical Physics</strong> and 
         <strong>Solid State Physics</strong> with a particular affinity for phase transitions. My academic and research interests lie at the intersection of 
@@ -72,12 +72,22 @@
       <h2>Projects</h2>
       <div class="card-grid">
         <div class="card">
-          <h3><a href="https://github.com/Nadjmu/yokodaq" target="_blank">Neural ODE Solver</a></h3>
-          <p>Implemented machine learning models to learn the dynamics of coupled ODE systems — bridging physics and data-driven prediction.</p>
+          <h3><a href="https://github.com/Nadjmu/ara" target="_blank">Time Series Data Analysis Tool </a></h3>
+          <p>.</p>
         </div>
         <div class="card">
-          <h3><a href="https://github.com/YOUR_GITHUB_USERNAME/sensor-interface" target="_blank">Industrial Sensor Interface</a></h3>
+          <h3><a href="https://github.com/Nadjmu/guitar_0" target="_blank">Guitar Improvisation Tool </a></h3>
+          <p>.</p>
+        </div>
+        <div class="card">
+          <h3><a href="https://github.com/Nadjmu/DMSP" target="_blank">System Development for Resarch Module DMSP</a></h3>
           <p>Developed STM32-based system enabling dual communication over RS485 and HART protocols, combining firmware and hardware control.</p>
+        </div>
+        <div class="card">
+          <h3><a href="https://github.com/Nadjmu/yokodaq" target="_blank">Fullstack development for the data acquisition unit 
+            Yokogawa DA100 Main Unit
+          </a></h3>
+          <p>Implemented machine learning models to learn the dynamics of coupled ODE systems — bridging physics and data-driven prediction.</p>
         </div>
       </div>
     </section>
