--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <a href="#about">About</a>
         <a href="#academic">Academic Focus</a>
         <a href="#projects">Projects</a>
-        <a href="#global">Global Experience</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -58,6 +57,7 @@
         During my Bachelor’s and Master’s studies at ETH Zurich, my coursework was more theoretically inclined, with a focus on:
         <li><strong>Statistical Physics:</strong> exploring emergent behaviors and complex systems.</li>
         <li><strong>Solid State Physics:</strong> studying electronic structure and condensed matter phenomena.</li>
+        <li><strong>Conformal Field Theory:</strong> Quantum Field Theories with conformal symmetry and its applications</li>
       </ul>
 
       <p>My most recent <a href="papers/seminar.pdf" target="_blank"> seminar paper</a> dealt with the Coset Construction of the N=2
@@ -80,7 +80,11 @@
           <p>.</p>
         </div>
         <div class="card">
-          <h3><a href="https://github.com/Nadjmu/DMSP" target="_blank">System Development for Resarch Module DMSP</a></h3>
+          <h3><a href="https://github.com/Nadjmu/FPGA-based-metal-detector.git" target="_blank">FPGA-based metal detector for ordnance detection </a></h3>
+          <p>.</p>
+        </div>
+        <div class="card">
+          <h3><a href="https://github.com/Nadjmu/DMSP" target="_blank">System Development for Resarch Module Dynamic Mobile Sensing Platform</a></h3>
           <p>Developed STM32-based system enabling dual communication over RS485 and HART protocols, combining firmware and hardware control.</p>
         </div>
         <div class="card">
