--- a/index.html
+++ b/index.html
@@ -73,25 +73,37 @@
       <div class="card-grid">
         <div class="card">
           <h3><a href="https://github.com/Nadjmu/ara" target="_blank">Time Series Data Analysis Tool </a></h3>
-          <p>.</p>
+          <p>This tool was designed to do data-analysis for large datasets with tens of thousands of rows and dozens of columns of uniformly sampled environmental,
+            operational and biochemical data without having to rewrite code all the time. It includes sections about all important statistical measures as well as 
+            Time-Series-Decomposition and Correlations. It was entirely written with Streamlit. </aside></p>
         </div>
         <div class="card">
           <h3><a href="https://github.com/Nadjmu/guitar_0" target="_blank">Guitar Improvisation Tool </a></h3>
-          <p>.</p>
+          <p>This tool was designed to see the common patterns of music-theoretical elements on the guitar fretboard thereby giving 
+            a visual component to music theory. It helps with the simplest elements such as a single note to more complex ones such as chords and scales.
+            The tool is entirely built in python and uses Streamlit, a rather unconvential use case for it. 
+          </p>
         </div>
         <div class="card">
           <h3><a href="https://github.com/Nadjmu/FPGA-based-metal-detector.git" target="_blank">FPGA-based metal detector for ordnance detection </a></h3>
-          <p>.</p>
+          <p>The project aims to detect unexploded ordnance by using Electromagnetic Field Induction Spectroscopy and leveraging the parallel processing 
+            capabilities of a FPGA. I got to learn about hardware description languages and signal decomposition techniques</p>
         </div>
         <div class="card">
           <h3><a href="https://github.com/Nadjmu/DMSP" target="_blank">System Development for Resarch Module Dynamic Mobile Sensing Platform</a></h3>
-          <p>Developed STM32-based system enabling dual communication over RS485 and HART protocols, combining firmware and hardware control.</p>
+          <p>I selected the necessary hardware components (microcontroller and sensors) and wrote the software in C. The project aims to capture 
+            high-resolution uniformly sampled GPS and IMU data for deep learning research in the field of structural engineering. I dealt with peripherals 
+            such as I2C and SPI, Real-time operating systems such as FreeRTOS, IoT Platforms such as Blynk and got a little bit familiar with TinyML by 
+            working with Tensorflow Lite    
+          </p>
         </div>
         <div class="card">
           <h3><a href="https://github.com/Nadjmu/yokodaq" target="_blank">Fullstack development for the data acquisition unit 
             Yokogawa DA100 Main Unit
           </a></h3>
-          <p>Implemented machine learning models to learn the dynamics of coupled ODE systems — bridging physics and data-driven prediction.</p>
+          <p>I used Wireshark to decript the incoming TCP packets of the machine and wrote a C++ program which sends the same commands like a commerical software.
+            I built a GUI using PyQT5 to control the DA100 Main Unit and log data into a InfluxDB database.
+          </p>
         </div>
       </div>
     </section>
