--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="about">
       <h2>About me</h2>
       <p>
-        I am in the final year of my Master’s in Physics, specializing in <strong>Statistical Physics</strong> and 
+        I am in the final year of my Master’s in Physics at ETH Zurich, specializing in <strong>Statistical Physics</strong> and 
         <strong>Solid State Physics</strong> with a particular affinity for phase transitions. My academic and research interests lie at the intersection of 
         <strong>physics, computation, and machine learning</strong>—specifically in applying modern AI techniques 
         to model and understand complex systems.
