--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       </p>
       <p>
         Furthermore, my international background has equipped me with strong cross-cultural communication skills
-        after having lived, studied, and worked across four continents and being proficient in Chinese, 
-        English, German, Spanish and Arabic. As a result, I orchestrated successful commercial agreements between 
-        Chinese and European firms as a lead translator, mediator, and cultural liaison. 
+        after having lived, studied, and worked across four continents and being proficient in 
+        English, Chinese, German, Spanish and Arabic. As a result, I orchestrated successful commercial agreements between 
+        European and Chinese firms as a lead translator, mediator, and cultural liaison. 
         I am now expanding my services to new sectors and I am open for business and ready to help your company navigate cross-cultural deals. 
         Please feel free to contact me to discuss your needs. 
       </p>
