--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container header-container">
       <div>
         <h1>Yiming Li</h1>
-        <p>ETH Zurich Master's Student Physics | Developer | Translator, Mediator & Cultural Advisor</p>
+        <p>ETH Zurich Master's Student Physics | Developer </p>
       </div>
       <nav>
         <a href="#about">About</a>
@@ -41,6 +41,7 @@
         I’m passionate about combining scientific analysis with real-world applications and am currently
         exploring opportunities that merge <strong>AI and physics.</strong>
       </p>
+      <!--
       <p>
         Furthermore, my international background has equipped me with strong cross-cultural communication skills
         after having lived, studied, and worked across four continents and being proficient in 
@@ -49,6 +50,7 @@
         I am now expanding my services to new sectors and I am open for business and ready to help your company navigate cross-cultural deals. 
         Please feel free to contact me to discuss your needs. 
       </p>
+    -->
     </section>
 
     <section id="academic">
