--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container header-container">
       <div>
         <h1>Yiming Li</h1>
-        <p>ETH Zurich Master's Student Physics | Developer </p>
+        <p>ETH Zurich Master's Student Theoretical Physics </p>
       </div>
       <nav>
         <a href="#about">About</a>
@@ -27,38 +27,30 @@
     <section id="about">
       <h2>About me</h2>
       <p>
-        I am in the final year of my Master’s in Physics at ETH Zurich, specializing in <strong>Statistical Physics</strong> and 
-        <strong>Solid State Physics</strong> with a particular affinity for phase transitions. My academic and research interests lie at the intersection of 
-        <strong>physics, computation, and machine learning</strong>—specifically in applying modern AI techniques 
-        to model and understand complex systems.
+        I am in the final year of my Master’s in Physics at ETH Zurich, specializing in analytical and computational methods 
+        for solving quantum many-body problems including renormalization group techniques as well as various Quantum Monte Carlo 
+        methods and <a href="https://en.wikipedia.org/wiki/Tensor_network" target="_blank">tensor networks</a>. My most recent endevours include Deep Learning and I am currently exploring the applications of it.
+        My current Master’s thesis focuses on Quantum many-body scars and their stability under pertubations of the Hamiltonian or their state.
+        I hope to get an understanding of the continuum limit of these systems with tensor networks or through other algorithmic improvements.
       </p>
       <p>
-        Alongside my studies, I have accumulated <strong>years of professional development experience</strong>,
-        working on projects that range from embedded systems and data pipelines to web-based solutions. 
-        I enjoy bridging scientific rigor with software engineering practices.
+        Alongside my studies, I have accumulated years of professional development experience,
+        working on projects that range from electronics, embedded systems and data pipelines to web-based statistical data analysis solutions. 
       </p>
+        I have also extensive cultural knowledge after having lived in four different continents and being able to speak multiple languages including German, 
+        Chinese, English, Arabic and a good amount of Spanish and Portugese. 
       <p>
-        I’m passionate about combining scientific analysis with real-world applications and am currently
-        exploring opportunities that merge <strong>AI and physics.</strong>
+
       </p>
-      <!--
-      <p>
-        Furthermore, my international background has equipped me with strong cross-cultural communication skills
-        after having lived, studied, and worked across four continents and being proficient in 
-        English, Chinese, German, Spanish and Arabic. As a result, I orchestrated successful commercial agreements between 
-        European and Chinese firms as a lead translator, mediator, and cultural liaison. 
-        I am now expanding my services to new sectors and I am open for business and ready to help your company navigate cross-cultural deals. 
-        Please feel free to contact me to discuss your needs. 
-      </p>
-    -->
     </section>
 
     <section id="academic">
       <h2>Academic Focus</h2>
       <ul>
         During my Bachelor’s and Master’s studies at ETH Zurich, my coursework was more theoretically inclined, with a focus on:
-        <li><strong>Statistical Physics:</strong> exploring emergent behaviors and complex systems.</li>
-        <li><strong>Solid State Physics:</strong> studying electronic structure and condensed matter phenomena.</li>
+        <li><strong>Statistical Physics:</strong> exploring emergent behaviors and complex systems. I am particulary fascinated by phase transitions 
+        and the scale-invariant behaviour of systems approaching critical points. </li>
+        <li><strong>Condensed Matter Physics:</strong> studying electronic structure and condensed matter phenomena.</li>
         <li><strong>Conformal Field Theory:</strong> Quantum Field Theories with conformal symmetry and its applications</li>
       </ul>
 
