--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container header-container">
       <div>
         <h1>Yiming Li</h1>
-        <p>ETH Zurich Master's Student Theoretical Physics </p>
+        <p>ETH Zurich Master's Student Theoretical Physics | Quantum many-body systems | Tensor networks | Deep Learning</p>
       </div>
       <nav>
         <a href="#about">About</a>
@@ -28,16 +28,16 @@
       <h2>About me</h2>
       <p>
         I am in the final year of my Master’s in Physics at ETH Zurich, specializing in analytical and computational methods 
-        for solving quantum many-body problems including renormalization group techniques as well as various Quantum Monte Carlo 
-        methods and <a href="https://en.wikipedia.org/wiki/Tensor_network" target="_blank">tensor networks</a>. My most recent endevours include Deep Learning and I am currently exploring the applications of it.
-        My current Master’s thesis focuses on Quantum many-body scars and their stability under pertubations of the Hamiltonian or their state.
-        I hope to get an understanding of the continuum limit of these systems with tensor networks or through other algorithmic improvements.
+        for solving quantum many-body problems, including renormalization group techniques as well as various Quantum Monte Carlo 
+        methods and <a href="https://en.wikipedia.org/wiki/Tensor_network" target="_blank">tensor networks</a>. My most recent endevors include Deep Learning and I am currently exploring its applications.
+        My current Master’s thesis focuses on quantum many-body scars and their stability under perturbations of the Hamiltonian or their state.
+        I aim to get an understanding of the continuum limit of these systems with tensor networks or other algorithmic approaches.
       </p>
       <p>
         Alongside my studies, I have accumulated years of professional development experience,
         working on projects that range from electronics, embedded systems and data pipelines to web-based statistical data analysis solutions. 
       </p>
-        I have also extensive cultural knowledge after having lived in four different continents and being able to speak multiple languages including German, 
+        I have also extensive cultural knowledge after having lived on four different continents and being able to speak multiple languages including German, 
         Chinese, English, Arabic and a good amount of Spanish and Portugese. 
       <p>
 
@@ -48,8 +48,8 @@
       <h2>Academic Focus</h2>
       <ul>
         During my Bachelor’s and Master’s studies at ETH Zurich, my coursework was more theoretically inclined, with a focus on:
-        <li><strong>Statistical Physics:</strong> exploring emergent behaviors and complex systems. I am particulary fascinated by phase transitions 
-        and the scale-invariant behaviour of systems approaching critical points. </li>
+        <li><strong>Statistical Physics:</strong> exploring emergent behaviors and complex systems. I am particularly fascinated by phase transitions 
+        and the scale-invariant behavior of systems approaching critical points. </li>
         <li><strong>Condensed Matter Physics:</strong> studying electronic structure and condensed matter phenomena.</li>
         <li><strong>Conformal Field Theory:</strong> Quantum Field Theories with conformal symmetry and its applications</li>
       </ul>
