--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         working on projects that range from electronics, embedded systems and data pipelines to web-based statistical data analysis solutions. 
       </p>
         I have also extensive cultural knowledge after having lived on four different continents and being able to speak multiple languages including German, 
-        Chinese, English, Arabic and a good amount of Spanish and Portugese. 
+        Chinese, English, Arabic and a good amount of Spanish and Portuguese. 
       <p>
 
       </p>
@@ -68,8 +68,18 @@
         <div class="card">
           <h3><a href="https://github.com/Nadjmu/guitar_0" target="_blank">Guitar Improvisation Tool </a></h3>
           <p>This tool was designed to see the common patterns of music-theoretical elements on the guitar fretboard thereby giving 
-            a visual component to music theory. It helps with the simplest elements such as a single note to more complex ones such as chords and scales.
+            a visual component to music theory. It helps with the simplest elements such as a single note and goes to more complex ones such as chords and scales.
             The tool is entirely built in python and uses Streamlit, a rather unconvential use case for it. 
+          </p>
+        </div>
+        <div class="card">
+          <h3><a href="https://github.com/Nadjmu/guitar_0" target="_blank">Autonomous driving soccer robot for the RoboCup Junior Lightweight League </a></h3>
+          <p>My team and I built a soccer robot for one of the worlds largest competition for autonomous driving robots RoboCupJunior. 
+            I was responsible for the software development and the electronic board design of the robot, which included writing the control algorithms in C++ 
+            and interfacing with various sensors (infrared, ultrasonic, camera, IMU, etc. ) and actuators (motors) over various peripherals (I2C, SPI, Serial) and wireless communication between the robots (Bluetooth). 
+            The board design was done with EDA software Eagle. The rules are according to: <a href="https://junior.robocup.org/soccer/" target="_blank">https://junior.robocup.org/soccer/</a>. 
+            This is a video of us playing at the European Championship against Russia: <a href="https://www.youtube.com/watch?v=PZbQC_VygyU" target="_blank">https://www.youtube.com/watch?v=PZbQC_VygyU</a> 
+            in the final. 
           </p>
         </div>
         <div class="card">
