--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </p>
         </div>
         <div class="card">
-          <h3><a href="https://github.com/Nadjmu/guitar_0" target="_blank">Autonomous driving soccer robot for the RoboCup Junior Lightweight League </a></h3>
+          <h3><a href="https://github.com/Nadjmu/soccer-robot" target="_blank">Autonomous driving soccer robot for the RoboCup Junior Lightweight League </a></h3>
           <p>My team and I built a soccer robot for one of the worlds largest competition for autonomous driving robots RoboCupJunior. 
             I was responsible for the software development and the electronic board design of the robot, which included writing the control algorithms in C++ 
             and interfacing with various sensors (infrared, ultrasonic, camera, IMU, etc. ) and actuators (motors) over various peripherals (I2C, SPI, Serial) and wireless communication between the robots (Bluetooth). 
